--- a/Source/Projects/VS2012/Console/Console.vcxproj.filters
+++ b/Source/Projects/VS2012/Console/Console.vcxproj.filters
@@ -10,18 +10,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Console.cpp">
+    <ClCompile Include="..\..\..\Console\Console.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Resource Script.rc">
-      <Filter>Resource Files</Filter>
+    <ResourceCompile Include="..\..\..\Console\Resource Script.rc">
+      <Filter>Source Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h">
-      <Filter>Resource Files</Filter>
-    </ClInclude>
+    <ClInclude Include="..\..\..\Console\resource.h" />
   </ItemGroup>
 </Project>
