Monkey's Audio 4.12 (June 26, 2013)
1. Changed: Numerous fixes for OSX and 64-bit compatibility.

--- a/Source/Projects/VS2012/Console/Console.vcxproj
+++ b/Source/Projects/VS2012/Console/Console.vcxproj
@@ -81,6 +81,7 @@
     <OutDir>$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>MAC</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(Configuration)\</OutDir>
