--- a/Source/Projects/VS2012/DirectShow Filter/APE Decoder.vcxproj
+++ b/Source/Projects/VS2012/DirectShow Filter/APE Decoder.vcxproj
@@ -77,6 +77,7 @@
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
     <TargetName>APE</TargetName>
+    <TargetExt>.ax</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(Configuration)\</OutDir>
