--- a/Source/Projects/VS2012/MAC/MAC.vcxproj
+++ b/Source/Projects/VS2012/MAC/MAC.vcxproj
@@ -82,7 +82,7 @@
     <OutDir>$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>$(ProjectName)</TargetName>
+    <TargetName>Monkey's Audio</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(Configuration)\</OutDir>
